--- a/miniprogram/pages/manage/dishes-edit/index.wxml
+++ b/miniprogram/pages/manage/dishes-edit/index.wxml
@@ -13,7 +13,17 @@
     <input name="title" placeholder="请输入..." value="{{goods.title}}"></input>
   </view>
 
-  <view class="cu-form-group" bind:tap="openMap">
+  <view class="cu-form-group">
+    <view class="title">分类</view>
+    <picker name="classify" style="flex: 1;height: 100%;text-align: center;" bindchange="bindPickerChange" value="{{index}}" range="{{goodsTypeList}}" range-key="title">
+      <view style="font-size: 12px;line-height: 90rpx;">
+        {{goodsTypeList[index].title}}
+      </view>
+    </picker>
+    <!-- <image style="width: 16px;" src="../../../images/icons/choice.svg" mode="widthFix" /> -->
+  </view>
+
+  <view class="cu-form-group">
     <view class="title">原价</view>
     <input name="price" type="number" value="{{goods.price}}" placeholder="请输入..."></input>
     <text class="text-orange">单位分</text>
