--- a/miniprogram/pages/manage/dishes/index.wxml
+++ b/miniprogram/pages/manage/dishes/index.wxml
@@ -35,6 +35,9 @@
                     <view class="cu-tag round bg-gray sm">¥ {{item.price/100}}</view>
                     <view class="cu-tag round bg-orange sm">¥ {{item.vipPrice/100}}</view>
                     <view class="text-gray text-sm flex">
+                        <text wx:if="{{item.classifyTag}}" class="text-cut round bg-blue cu-tag"> {{item.classifyTag}}</text>
+                    </view>
+                    <view class="text-gray text-sm flex">
                         <text class="text-cut"> 备注：{{item.remarks}}</text>
                     </view>
                 </view>
