--- a/miniprogram/pages/watchOrder/index.wxml
+++ b/miniprogram/pages/watchOrder/index.wxml
@@ -42,7 +42,7 @@
                 </view>
             </view> -->
 
-            <scroll-view scroll-y="true" style="height: {{containerHeight-90}}rpx;">
+            <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="getOrderList" refresher-triggered="{{isRefreshing}}">
                 <block wx:for="{{ orderList }}" wx:for-item="orderDetail" wx:key="_id" wx:for-index="index">
                     <view class="cu-card">
                         <view class="cu-item shadow">
