--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -1,13 +1,13 @@
 <!--index.wxml-->
 <cu-custom bgColor="bg-white" isBack="{{false}}">
-  <view slot="backText">返回</view>
-  <view slot="content">千人吃鸡</view>
+    <view slot="backText">返回</view>
+    <view slot="content">千人吃鸡</view>
 </cu-custom>
 
 <!-- 数据加载，显示loading态 -->
 <view class='cu-load load-modal' wx:if="{{isLoading}}">
-  <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
-  <view class='gray-text text-xs'>加载中...</view>
+    <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
+    <view class='gray-text text-xs'>加载中...</view>
 </view>
 
 <!-- 店铺 -->
@@ -16,150 +16,152 @@
 <!-- 数据加载完毕 -->
 <block wx:if="{{ !isLoading }}">
 
-  <!-- 有数据 -->
-  <view wx:if="{{ goodsList.length >= 1 }}">
-    <!-- 底部结算 -->
-    <view class="order-list" bindtap="openPopup">
-      <view>
-        <image style="width: 60rpx;" src="../../images/icons/car.png" mode="widthFix" />
-        <view wx:if="{{ orderList.length >= 1 }}" class="order-number">{{orderTotalNumber}}</view>
-      </view>
-      <view class="margin-left" wx:if="{{orderTotalPrice}}">
-        <view class="flex">
-          <view style="margin-left: 12px;">会员到手</view>
-          <view class="order-total margin-left-xs">
-            {{'¥'+orderTotalVipPrice}}
-          </view>
-        </view>
-        <view>
-          <view style="margin-left: 12px;font-size: 21rpx;text-decoration: line-through;color: gray;">原价 {{'¥'+orderTotalPrice}}</view>
-        </view>
-      </view>
-
-      <view wx:else style="margin-left: 12px;">
-        请添加菜品
-      </view>
-      <button style="width:90px" class="order-pay" catchtap="goToPay" disabled="{{orderTotalNumber<1}}">
-        去结算
-      </button>
-    </view>
-
-
-    <!-- 商品列表 -->
-    <view class="VerticalBox">
-      <scroll-view class="VerticalNav nav" scroll-y scroll-with-animation scroll-top="{{VerticalNavTop}}" style="height:calc(100vh - 375rpx)">
-        <view class="cu-item {{index==TabCur?'text-blue cur':''}}" wx:for="{{goodsTypeList}}" wx:key="index" bindtap='tabSelect' data-id="{{item.value}}">
-          {{item.title}}
-        </view>
-      </scroll-view>
-      <scroll-view class="VerticalMain" scroll-y scroll-with-animation style="height: {{containerHeight - 150}}rpx;" scroll-into-view="main-{{MainCur}}" bindscroll="VerticalMain">
-        <view class="padding-top padding-lr" wx:for="{{goodsTypeList}}" wx:key="index" id="main-{{item.value}}">
-          <view class='cu-bar solid-bottom bg-white'>
-            <view class='action'>
-              <text class='cuIcon-title text-blue'></text> {{item.title}}
+    <!-- 有数据 -->
+    <view wx:if="{{ goodsList.length >= 1 }}">
+        <!-- 底部结算 -->
+        <view class="order-list" bindtap="openPopup">
+            <view>
+                <image style="width: 60rpx;" src="../../images/icons/car.png" mode="widthFix" />
+                <view wx:if="{{ orderList.length >= 1 }}" class="order-number">{{orderTotalNumber}}</view>
             </view>
-          </view>
-          <view class="cu-list menu-avatar bg-white" style="min-height: 900rpx;position: relative;">
-            <image style="width: 100%; position: absolute;top: 20%;opacity: 0.1;" src="../../images/no-goods.svg" mode=""></image>
-            <view wx:if="{{item.value==0&&index<5}}" wx:for="{{goodsList}}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index" class="cu-item cur">
-              <image class="cu-avatar lg" src="{{goodsDetail.img||'../../images/default-goods-image.png'}}" mode="aspectFill" />
-              <view class="content">
+            <view class="margin-left" wx:if="{{orderTotalPrice}}">
+                <view class="flex">
+                    <view style="margin-left: 12px;">会员到手</view>
+                    <view class="order-total margin-left-xs">
+                        {{'¥'+orderTotalVipPrice}}
+                    </view>
+                </view>
                 <view>
-                  <text class="text-cut">{{goodsDetail.title }}</text>
-                  <!-- <view class="cu-tag round bg-orange sm">6人</view> -->
+                    <view style="margin-left: 12px;font-size: 21rpx;text-decoration: line-through;color: gray;">原价 {{'¥'+orderTotalPrice}}</view>
                 </view>
-                <view class="text-gray text-sm flex">
-                  <text class="text-cut">￥<text style="text-decoration:line-through;">{{ goodsDetail.price / 100 }}</text> <text class="cuIcon-vip text-orange margin-left-xs"></text><text class="text-orange">￥{{ goodsDetail.price / 100 }}</text></text>
-                </view>
-              </view>
-              <view class="action">
-                <view class="goods-flex">
-                  <image wx:if="{{goodsDetail.number > 0}}" class="btn-add" bind:tap="reduceGoods" data-index="{{goodsDetail._id}}" src=" ../../images/icons/reduce.png">
-                  </image>
-                  <view wx:if="{{goodsDetail.number > 0}}" class="price-symbol">{{goodsDetail.number}}</view>
-                  <image class="btn-add" bind:tap="addGoods" data-index="{{goodsDetail._id}}" src=" ../../images/icons/add.png">
-                  </image>
-                </view>
-              </view>
             </view>
 
-            <view wx:if="{{m1.isShow(item,goodsDetail)}}" wx:for="{{goodsList}}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index" class="cu-item cur">
-
-              <image class="cu-avatar lg" src="{{goodsDetail.img||'../../images/default-goods-image.png'}}" mode="aspectFill" />
-              <view class="content">
-                <view>
-                  <text class="text-cut">{{goodsDetail.title }}</text>
-                  <!-- <view class="cu-tag round bg-orange sm">6人</view> -->
-                </view>
-                <view class="text-gray text-sm flex">
-                  <text class="text-cut">￥<text style="text-decoration:line-through;">{{ goodsDetail.price / 100 }}</text> <text class="cuIcon-vip text-orange margin-left-xs"></text><text class="text-orange">￥{{ goodsDetail.price / 100 }}</text></text>
-                </view>
-              </view>
-              <view class="action">
-                <view class="goods-flex">
-                  <image wx:if="{{goodsDetail.number > 0}}" class="btn-add" bind:tap="reduceGoods" data-index="{{goodsDetail._id}}" src=" ../../images/icons/reduce.png">
-                  </image>
-                  <view wx:if="{{goodsDetail.number > 0}}" class="price-symbol">{{goodsDetail.number}}</view>
-                  <image class="btn-add" bind:tap="addGoods" data-index="{{goodsDetail._id}}" src=" ../../images/icons/add.png">
-                  </image>
-                </view>
-              </view>
+            <view wx:else style="margin-left: 12px;">
+                请添加菜品
             </view>
-          </view>
+            <button style="width:90px" class="order-pay" catchtap="goToPay" disabled="{{orderTotalNumber<1}}">
+                去结算
+            </button>
         </view>
-        <view style="height: 90rpx;"></view>
-      </scroll-view>
-    </view>
-  </view>
 
-  <!-- 无数据 -->
-  <block wx:else>
-    <view style="text-align: center;margin-top: 20vh;">
-      <image style="width: 50vw;" src="../../images/icons/no-data.svg" mode="widthFix" />
-      <view style="top: -240rpx;">暂无数据</view>
-    </view>
-  </block>
-
-  <!-- 底部弹窗 -->
-  <view class="popup-box" wx:if="{{showOrder}}" bindtap="closePopup"></view>
-  <view class="info-bottom" wx:if="{{showOrder}}">
-    <view class="row-info">
-      <view>
-        <text class="line left-line"></text>
-        <text>购物车</text>
-        <text class="line right-line"></text>
-      </view>
-      <scroll-view scroll-y="true" style="max-height: 200px;">
-        <block wx:for="{{ orderList }}" wx:for-item="ordersDetail" wx:key="_id" wx:for-index="index">
-          <view style="display: flex;align-items: center;">
-            <image class="order-image" src="{{ordersDetail.img||'../../images/default-goods-image.png'}}" mode="aspectFill" />
-            <view class="goods-title" style="margin-left: 9px;">{{ ordersDetail.title }}</view>
-            <view class="goods-bottom-container">
-              <view class="goods-price">
-                <view class="price-symbol">¥</view>
-                <view class="price-content">{{ ordersDetail.price / 100 }}
+        <!-- 商品列表 -->
+        <view class="VerticalBox">
+            <scroll-view class="VerticalNav nav" scroll-y scroll-with-animation scroll-top="{{VerticalNavTop}}" style="height:calc(100vh - 375rpx)">
+                <view class="cu-item {{index==TabCur?'text-blue cur':''}}" wx:for="{{goodsTypeList}}" wx:key="index" bindtap='tabSelect' data-id="{{item.value}}">
+                    {{item.title}}
                 </view>
-              </view>
-              <view class="goods-flex">
-                <image wx:if="{{ordersDetail.number > 0}}" class="btn-add" bind:tap="reduceGoods" data-index="{{ordersDetail._id}}" src=" ../../images/icons/reduce.png">
-                </image>
-                <view wx:if="{{ordersDetail.number > 0}}" class="price-symbol">{{ordersDetail.number}}</view>
-                <image class="btn-add" bind:tap="addGoods" data-index="{{ordersDetail._id}}" src=" ../../images/icons/add.png">
-                </image>
-              </view>
-            </view>
-          </view>
-        </block>
-      </scroll-view>
+            </scroll-view>
+            <scroll-view class="VerticalMain" scroll-y scroll-with-animation style="height: {{containerHeight - 150}}rpx;" scroll-into-view="main-{{MainCur}}" bindscroll="VerticalMain" refresher-enabled="true" bindrefresherrefresh="fetchGoodsList" refresher-triggered="{{isRefreshing}}">
+                <view class=" padding-top padding-lr" wx:for="{{goodsTypeList}}" wx:key="index" id="main-{{item.value}}">
+                    <view class='cu-bar solid-bottom bg-white'>
+                        <view class='action'>
+                            <text class='cuIcon-title text-blue'></text> {{item.title}}
+                        </view>
+                    </view>
+                    <view class="cu-list menu-avatar bg-white" style="min-height: 900rpx;position: relative;">
+                        <image style="width: 100%; position: absolute;top: 20%;opacity: 0.1;" src="../../images/no-goods.svg" mode=""></image>
+                        <view wx:if="{{item.value==0&&index<5}}" wx:for="{{goodsList}}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index" class="cu-item cur">
+                            <image class="cu-avatar lg" src="{{goodsDetail.img||'../../images/default-goods-image.png'}}" mode="aspectFill" />
+                            <view class="content">
+                                <view>
+                                    <text class="text-cut">{{goodsDetail.title }}</text>
+                                    <!-- <view class="cu-tag round bg-orange sm">6人</view> -->
+                                </view>
+                                <view class="text-gray text-sm flex">
+                                    <text class="text-cut">￥<text style="text-decoration:line-through;">{{ goodsDetail.price / 100 }}</text> <text class="cuIcon-vip text-orange margin-left-xs"></text><text class="text-orange">￥{{ goodsDetail.vipPrice / 100 }}</text></text>
+                                </view>
+                            </view>
+                            <view class="action">
+                                <view class="goods-flex">
+                                    <image wx:if="{{goodsDetail.number > 0}}" class="btn-add" bind:tap="reduceGoods" data-index="{{goodsDetail._id}}" src=" ../../images/icons/reduce.png">
+                                    </image>
+                                    <view wx:if="{{goodsDetail.number > 0}}" class="price-symbol">{{goodsDetail.number}}</view>
+                                    <image class="btn-add" bind:tap="addGoods" data-index="{{goodsDetail._id}}" src=" ../../images/icons/add.png">
+                                    </image>
+                                </view>
+                            </view>
+                        </view>
+
+                        <view wx:if="{{m1.isShow(item,goodsDetail)}}" wx:for="{{goodsList}}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index" class="cu-item cur">
+
+                            <image class="cu-avatar lg" src="{{goodsDetail.img||'../../images/default-goods-image.png'}}" mode="aspectFill" />
+                            <view class="content">
+                                <view>
+                                    <text class="text-cut">{{goodsDetail.title }}</text>
+                                    <!-- <view class="cu-tag round bg-orange sm">6人</view> -->
+                                </view>
+                                <view class="text-gray text-sm flex">
+                                    <text class="text-cut">￥<text style="text-decoration:line-through;">{{ goodsDetail.price / 100 }}</text> <text class="cuIcon-vip text-orange margin-left-xs"></text><text class="text-orange">￥{{ goodsDetail.price / 100 }}</text></text>
+                                </view>
+                            </view>
+                            <view class="action">
+                                <view class="goods-flex">
+                                    <image wx:if="{{goodsDetail.number > 0}}" class="btn-add" bind:tap="reduceGoods" data-index="{{goodsDetail._id}}" src=" ../../images/icons/reduce.png">
+                                    </image>
+                                    <view wx:if="{{goodsDetail.number > 0}}" class="price-symbol">{{goodsDetail.number}}</view>
+                                    <image class="btn-add" bind:tap="addGoods" data-index="{{goodsDetail._id}}" src=" ../../images/icons/add.png">
+                                    </image>
+                                </view>
+                            </view>
+                        </view>
+                    </view>
+                </view>
+                <view style="height: 90rpx;"></view>
+            </scroll-view>
+        </view>
     </view>
-    <view style="height: 320rpx;"></view>
-  </view>
+
+    <!-- 无数据 -->
+    <block wx:else>
+        <view style="text-align: center;margin-top: 20vh;">
+            <image style="width: 50vw;" src="../../images/icons/no-data.svg" mode="widthFix" />
+            <view style="top: -240rpx;">暂无数据</view>
+        </view>
+    </block>
+
+    <!-- 底部弹窗 -->
+    <view class="popup-box" wx:if="{{showOrder}}" bindtap="closePopup"></view>
+    <view class="info-bottom" wx:if="{{showOrder}}">
+        <view class="row-info">
+            <view>
+                <text class="line left-line"></text>
+                <text>购物车</text>
+                <text class="line right-line"></text>
+            </view>
+            <scroll-view scroll-y="true" style="max-height: 200px;">
+                <block wx:for="{{ orderList }}" wx:for-item="ordersDetail" wx:key="_id" wx:for-index="index">
+                    <view style="display: flex;align-items: center;">
+                        <image class="order-image" src="{{ordersDetail.img||'../../images/default-goods-image.png'}}" mode="aspectFill" />
+                        <view class="goods-title" style="margin-left: 9px;">{{ ordersDetail.title }}</view>
+                        <view class="goods-bottom-container">
+                            <view class="goods-price">
+                                <view class="price-symbol">¥</view>
+                                <view class="price-content">{{ ordersDetail.price / 100 }}
+                                </view>
+                            </view>
+                            <view class="goods-flex">
+                                <image wx:if="{{ordersDetail.number > 0}}" class="btn-add" bind:tap="reduceGoods" data-index="{{ordersDetail._id}}" src=" ../../images/icons/reduce.png">
+                                </image>
+                                <view wx:if="{{ordersDetail.number > 0}}" class="price-symbol">{{ordersDetail.number}}</view>
+                                <image class="btn-add" bind:tap="addGoods" data-index="{{ordersDetail._id}}" src=" ../../images/icons/add.png">
+                                </image>
+                            </view>
+                        </view>
+                    </view>
+                </block>
+            </scroll-view>
+        </view>
+        <view style="height: 320rpx;"></view>
+    </view>
 </block>
 
 <wxs module="m1">
-  var isShow = function (item, goods) {
-    var tag = goods.classifyTag
-    return tag.indexOf(item.title) > -1
-  }
-  module.exports.isShow = isShow;
+    var isShow = function (item, goods) {
+        var tag = goods.classifyTag
+        if (tag) {
+            return tag.indexOf(item.title) > -1
+        }
+        return false
+    }
+    module.exports.isShow = isShow;
 </wxs>
