--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -153,7 +153,6 @@
     justify-content: flex-end;
 }
 
-
 .bottom_tips {
     width: 100%;
     text-align: center;
@@ -174,10 +173,6 @@
     width: 100%;
     height: 100%;
 }
-
-
-
-
 
 /* 下 */
 .info-bottom {
@@ -259,39 +254,42 @@ button {
 
 /* pages/component/nav/nav.wxss */
 .VerticalNav.nav {
-  width: 200rpx;
-  white-space: initial;
+    width: 200rpx;
+    white-space: initial;
 }
 
 .VerticalNav.nav .cu-item {
-  width: 100%;
-  text-align: center;
-  /* background-color: #fff; */
-  margin: 0;
-  border: none;
-  height: 50px;
-  position: relative;
+    width: 100%;
+    text-align: center;
+    /* background-color: #fff; */
+    margin: 0;
+    border: none;
+    height: 50px;
+    position: relative;
 }
 
 .VerticalNav.nav .cu-item.cur {
-  /* background-color: #f1f1f1; */
-  background-image: linear-gradient(to right, rgb(160, 160, 160), #f1f1f1);
+    /* background-color: #f1f1f1; */
+    background-image: linear-gradient(to right, rgb(160, 160, 160), #f1f1f1);
 }
+
 .VerticalNav.nav .cu-item.cur::after {
-  content: "";
-  width: 6rpx;
-  height: 60rpx;
-  border-radius: 10rpx 0 0 10rpx;
-  position: absolute;
-  background-color: currentColor;
-  top: 0;
-  right: 0rpx;
-  bottom: 0;
-  margin: auto;
+    content: "";
+    width: 9rpx;
+    height: 80rpx;
+    border-radius: 0 10rpx 10rpx 0;
+    position: absolute;
+    background-color: currentColor;
+    top: 0;
+    left: 0rpx;
+    bottom: 0;
+    margin: auto;
 }
-.VerticalBox{
-  display: flex;
+
+.VerticalBox {
+    display: flex;
 }
-.VerticalMain{
-  background-color: #f1f1f1;
+
+.VerticalMain {
+    background-color: #f1f1f1;
 }
