--- a/miniprogram/pages/map/index.wxml
+++ b/miniprogram/pages/map/index.wxml
@@ -1,8 +1,8 @@
 <!--pages/manage/shop-map/index.wxml-->
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-  <view slot="backText">返回</view>
-  <view slot="content">店铺位置</view>
+    <view slot="backText">返回</view>
+    <view slot="content">选择店铺</view>
 </cu-custom>
-<map style="width: 100vw;height: {{containerHeight}}rpx;" bind:tap="onMapTap" latitude="26.20252849089062" longitude="105.47991719994945" scale="12" markers="{{markers}}">
+<map id="mapId" style="width: 100vw;height: {{containerHeight}}rpx;" latitude="26.20252849089062" longitude="105.47991719994945" markers="{{markers}}" scale="3" show-location="true" show-scale="true" bindmarkertap="onSelect" bindupdated="onMapLoaded">
 </map>
-<button bind:tap="onSelect" class="cu-btn bg-blue round" style="z-index: 100;position: absolute;bottom: 100rpx;width: 90vw;margin-left: 5vw;">确定</button>
+<view class="text-gray" style="position: fixed; text-align: center;line-height: 120rpx; bottom: 0;z-index: 100;width: 100vw;background-color: white;height: 120rpx;font-size: 31rpx;">请在地图上选择店铺</view>
