--- a/miniprogram/pages/start/index.wxml
+++ b/miniprogram/pages/start/index.wxml
@@ -24,7 +24,7 @@
   </view>
   <view class="bg-white padding">
     <view class="grid col-4 margin-bottom text-center">
-      <view class="padding" wx:for="{{10}}" wx:key>{{index+1}}</view>
+      <view style="background-color: lightgray; border-radius: 56rpx;width: 18vw;margin: 2vw;padding: 1vw;" class="" wx:for="{{30}}" wx:key>{{index+1}}</view>
     </view>
   </view>
   <button style="position: fixed;bottom: 180rpx;left: 10vw; width: 80vw;" class="cu-btn round bg-blue lg" bind:tap="orderNow">
